// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sxakl60 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  vertical-align: middle;
}

.sxakl60op5z4--size-sm {
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  stroke-width: 1.75;
}

.sxakl60-iux96 {
  margin-right: var(--sx-space-2);
  flex-shrink: 0;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sx2cs53-1vtbu {
  color: var(--sx-colors-danger);
  align-items: flex-start;
  margin-top: var(--sx-space-2);
}

.sx8yt8k {
  color: var(--sx-colors-tonal600);
  font-family: var(--sx-fonts-body);
  font-weight: 400;
  margin: 0;
}

.sx8yt8kid6h2--size-sm {
  font-size: var(--sx-fontSizes-sm);
  line-height: 1.53;
}

.sx8yt8kid6h2--size-sm::before {
  content: '';
  margin-bottom: -0.4056em;
  display: table;
}

.sx8yt8kid6h2--size-sm::after {
  content: '';
  margin-top: -0.4056em;
  display: table;
}

.sx8yt8k-n4ol9 {
  color: inherit;
  transform: translateY(var(--sx-space-1));
}

.sxbagj1 {
  color: var(--sx-colors-tonal500);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxbagj18bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxbagj18bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxbagj18bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxxl4lf {
  color: var(--sx-colors-danger);
  margin-left: var(--sx-space-1);
}

.sx7g9w1 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal600);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sx7g9w1:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sx7g9w1[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sx7g9w1::placeholder {
  color: var(--sx-colors-tonal300);
  opacity: 1;
}

.sx7g9w1pw03g--size-md {
  height: var(--sx-sizes-4);
  font-size: var(--sx-fontSizes-md);
}

.sx7g9w1hpnso--state-error {
  border: 1px solid var(--sx-colors-danger);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxbagj1 sxbagj18bitc--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
          <span
            class="sxxl4lf"
          >
            *
          </span>
        </label>
      </div>
      <input
        class="sx7g9w1 sx7g9w1pw03g--size-md sx7g9w1hpnso--state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <div
        class="sx2cs53 sx2cs53-1vtbu"
      >
        <svg
          aria-hidden="true"
          class="sxakl60 sxakl60op5z4--size-sm sxakl60-iux96"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <p
          class="sx8yt8k sx8yt8kid6h2--size-sm sx8yt8k-n4ol9"
        >
          This field is required
        </p>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sxbagj1 {
  color: var(--sx-colors-tonal500);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxbagj18bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxbagj18bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxbagj18bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sx7g9w1 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal600);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sx7g9w1:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sx7g9w1[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sx7g9w1::placeholder {
  color: var(--sx-colors-tonal300);
  opacity: 1;
}

.sx7g9w1pw03g--size-md {
  height: var(--sx-sizes-4);
  font-size: var(--sx-fontSizes-md);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxbagj1 sxbagj18bitc--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sx7g9w1 sx7g9w1pw03g--size-md"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sxbagj1 {
  color: var(--sx-colors-tonal500);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxbagj18bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxbagj18bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxbagj18bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sx7g9w1 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal600);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sx7g9w1:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sx7g9w1[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sx7g9w1::placeholder {
  color: var(--sx-colors-tonal300);
  opacity: 1;
}

.sx7g9w1pw03g--size-md {
  height: var(--sx-sizes-4);
  font-size: var(--sx-fontSizes-md);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxbagj1 sxbagj18bitc--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sx7g9w1 sx7g9w1pw03g--size-md"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
